# gabdube.github.io

./: .gitignore  Cargo.toml  Gemfile  _config.yml  index.html  readme.md  rollup.config.mjs  styles.css
_layouts/: default.html  post.html
_posts/: 2019-01-10-python-and-vulkan-01.markdown  2019-01-10-welcome-to-jekyll.markdown  2019-04-06-shader-games.markdown
articles/navmesh_pathfinding/: navmesh_pathfinding.html  navmesh_pathfinding.js  navmesh_pathfinding_demo.js
articles/navmesh_pathfinding/assets/: atlas.csv  debug.frag.glsl  gui.frag.glsl  gui.vert.glsl  highlight_sprites.frag.glsl  highlight_sprites.vert.glsl  insert_sprite.frag.glsl  insert_sprite.vert.glsl  sprites.frag.glsl  sprites.vert.glsl  terrain.frag.glsl  terrain.vert.glsl
articles/navmesh_pathfinding/ts_src/: assets.ts  game_interface.ts  helpers.ts  navmesh_pathfinding.ts  renderer.ts  websocket.ts
articles/navmesh_pathfinding/wasm_src/: Cargo.toml
articles/navmesh_pathfinding/wasm_src/src/: data.rs  error.rs  lib.rs  logging.rs  output.rs  shared.rs  state.rs  store.rs
articles/navmesh_pathfinding/wasm_src/src/data/: assets.rs  base.rs  debug.rs  gui.rs  nogui.rs  terrain.rs  world.rs
articles/navmesh_pathfinding/wasm_src/src/data/gui/: components.rs
articles/navmesh_pathfinding/wasm_src/src/output/: gpu_shared.rs  message.rs  protocol.rs
articles/navmesh_pathfinding/wasm_src/src/state/: final_demo.rs  generation.rs  obstacles.rs  uninitialized.rs
local-server/: Cargo.toml
local-server/src/: main.rs
