[package]
name = "navmesh-pathfinding-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]

default = ["gui"]
gui = ["egui"]

[dependencies]

# WASM tooling
wasm-bindgen = "0.2.92"
zerocopy = "0.8"
zerocopy-derive = "0.8"

# ECS
hecs = "0.10.5"

# Std hashmap replacement
fnv = "1.0.7"

# Egui
# Egui increase the binary size by 10x & compile time by 5x, so we can turn it off for quicker testing
egui = { version = "0.31.1", default-features = false, features = [], optional = true }
